src/snapshots/raoul__tests__get_ast@array-cte.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/valid/non-plot/array-cte.ra
---
Main(([], [], [
    Assignment(false, Id(a), Array([Integer(0), Integer(1), Integer(2)])),
    Write([ArrayVal(a, Integer(0), None), ArrayVal(a, Integer(1), None), ArrayVal(a, Integer(2), None)]),
]))
