src/snapshots/raoul__tests__get_ast@array-list-index.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/dynamic/array-list-index.ra
---
Main(([], [
    Assignment(false, Id(a), ArrayDeclaration(INT, 3, None)),
    Assignment(false, ArrayDeclaration(a, Integer(3), None), Integer(2)),
    Write([ArrayDeclaration(a, Integer(3), None)]),
]))
