src/snapshots/raoul__tests__get_ast@array-list-missing-index.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/static/array-list-missing-index.ra
---
Main(([], [], [
    Assignment(false, Id(a), ArrayDeclaration(Int, 3, None)),
    Write([Id(a)]),
]))
