src/snapshots/raoul__tests__get_ast@array-mat-index.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/dynamic/array-mat-index.ra
---
Main(([], [
    Assignment(false, Id(a), ArrayDeclaration(INT, 3, Some(2))),
    Assignment(false, ArrayVal(a, Integer(3), Some(Integer(4))), Integer(2)),
    Write([ArrayVal(a, Integer(3), Some(Integer(4)))]),
]))
