src/snapshots/raoul__tests__get_ast@array-simple.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/valid/non-plot/array-simple.ra
---
Main(([], [], [
    Assignment(false, Id(c), ArrayDeclaration(INT, 3, None)),
    Assignment(false, ArrayVal(c, Integer(0), None), Integer(1)),
    Assignment(false, ArrayVal(c, Integer(1), None), Integer(2)),
    Assignment(false, ArrayVal(c, Integer(2), None), Integer(3)),
    Write([ArrayVal(c, Integer(0), None), ArrayVal(c, Integer(1), None), ArrayVal(c, Integer(2), None), ArrayVal(c, Integer(1), None), ArrayVal(c, Integer(0), None)]),
]))
