src/snapshots/raoul__tests__get_ast@assign-to-void.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/static/assign-to-void.ra
---
Main(([], [
    Function(test, VOID, [], [
        Assignment(false, Id(a), Integer(1)),
    ]),
], [
    Assignment(false, Id(a), FunctionCall(test, [])),
]))
