src/snapshots/raoul__tests__get_ast@assignment-every-type.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/valid/non-plot/assignment-every-type.ra
---
Main(([], [
    Function(helper, VOID, [Argument(INT, a), Argument(FLOAT, b), Argument(STRING, c), Argument(BOOL, d)], []),
], [
    Assignment(false, Id(a), Integer(1)),
    Assignment(false, Id(b), Float(1)),
    Assignment(false, Id(c), String(my string)),
    Assignment(false, Id(d), Bool(false)),
    Write([Id(a), Id(b), Id(c), Id(d)]),
]))
