src/snapshots/raoul__tests__get_ast@block-or-statement.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/valid/non-plot/block-or-statement.ra
---
Main(([], [
    Function(test, Int, [], [
        Decision(Bool(true), [Return(Integer(42))], None),
        Return(Integer(248)),
    ]),
], [
    Write([FunctionCall(test, [])]),
]))
