src/snapshots/raoul__tests__get_ast@div-0.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/dynamic/div-0.ra
---
Main(([], [], [
    Assignment(false, Id(a), BinaryOperation(Div, Integer(1), Integer(0))),
    Write([Id(a)]),
]))
