src/snapshots/raoul__tests__get_ast@float-to-int.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/valid/non-plot/float-to-int.ra
---
Main(([], [], [
    Assignment(false, Id(a), Integer(1)),
    Assignment(false, Id(a), Float(2.1)),
    Write([Id(a)]),
]))
